FEATURE - Atualização do sistema de autenticação e gerenciamento de usuários - Alterado o método de autenticação para utilizar CPF em vez de email. - Adicionadas novas validações para CPF e ajustes nos DTOs e entidades. - Implementadas novas rotas para registro de usuários e ajustes nas mensagens de log. - Refatoração de métodos para buscar usuários por CPF e melhorias na estrutura de controle de acesso.